--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = vtecftwy
 
 ### Optional ###
-# requirements = fastcore pandas
+# requirements = fastcore fastai numpy pandas graphviz matplotlib google jmd_imagescraper
 # dev_requirements = 
 # console_scripts =
