update requirements in settings.ini

--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = vtecftwy
 
 ### Optional ###
-# requirements = fastcore fastai numpy pandas graphviz matplotlib google jmd_imagescraper
-# dev_requirements = 
+# requirements = fastcore fastai 
+# dev_requirements = numpy pandas graphviz matplotlib google jmd_imagescraper
 # console_scripts =
