update requirements in settings.ini

--- a/settings.ini
+++ b/settings.ini
@@ -18,7 +18,7 @@ tst_flags = notest
 put_version_in_init = False
 
 ### Docs ###
-branch = main
+branch = master
 custom_sidebar = False
 doc_host = https://%(user)s.github.io
 doc_baseurl = /%(repo)s
@@ -37,6 +37,6 @@ status = 3
 user = vtecftwy
 
 ### Optional ###
-# requirements = fastcore fastai 
-# dev_requirements = numpy pandas graphviz matplotlib google jmd_imagescraper
+# requirements = fastcore fastai numpy pandas graphviz matplotlib google jmd_imagescraper
+# dev_requirements = 
 # console_scripts =
