add PIL in imports

--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = vtecftwy
 
 ### Optional ###
-requirements = fastcore fastai numpy pandas graphviz matplotlib jmd_imagescraper
+requirements = fastcore fastai numpy pandas graphviz matplotlib jmd_imagescraper pillow
 # dev_requirements = 
 # console_scripts =
