add mount_drive to imports

--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = vtecftwy
 
 ### Optional ###
-requirements = fastcore fastai numpy pandas graphviz matplotlib jmd_imagescraper pillow
+requirements = fastai graphviz jmd_imagescraper matplotlib numpy pandas pillow scipy
 # dev_requirements = 
 # console_scripts =
