--- a/settings.ini
+++ b/settings.ini
@@ -12,7 +12,7 @@ license = apache2
 ### nbdev ###
 doc_path = _docs
 lib_path = nb_guided_dive
-nbs_path = .
+nbs_path = nbs-dev
 recursive = False
 tst_flags = notest
 put_version_in_init = False
