--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = vtecftwy
 
 ### Optional ###
-requirements = fastai graphviz jmd_imagescraper matplotlib numpy pandas pillow scipy
+requirements = fastai graphviz duckduckgo_search jmd_imagescraper matplotlib numpy pandas pillow scipy
 # dev_requirements = 
 # console_scripts =
