correct import and __all__

--- a/nbs-dev/nbdev.yml
+++ b/nbs-dev/nbdev.yml
@@ -5,5 +5,5 @@ website:
   title: "nb-guided-dive"
   site-url: "https://vtecftwy.github.io/nb-guided-dive"
   description: "Package to make it easier for people with limited code experience to run guided guide jupyter notebooks"
-  repo-branch: main
+  repo-branch: master
   repo-url: "https://github.com/vtecftwy/nb-guided-dive"
